--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
 mybatis-plus:
   global-config:
     banner: false
+    db-config:
+      logic-delete-field: deleted # 全局逻辑删除的实体字段名
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
