completed testing of all APIs.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ mybatis-plus:
 logging:
   level:
     org.springframework.jdbc.support.JdbcTransactionManager: debug
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
